@@ -1,62 +1,0 @@
-## Process this file with automake to produce Makefile.in.
-# Copyright (C) 2004-2005 Free Software Foundation, Inc.
-#
-# This file is free software, distributed under the terms of the GNU
-# General Public License.  As a special exception to the GNU General
-# Public License, this file may be distributed as part of a program
-# that contains a configuration script generated by Automake, under
-# the same distribution terms as the rest of that program.
-#
-# Generated by gnulib-tool.
-
-AUTOMAKE_OPTIONS = 1.5 foreign
-
-ACLOCAL_AMFLAGS = -I ../gl/m4
-
-TESTS =
-TESTS_ENVIRONMENT =
-noinst_PROGRAMS =
-EXTRA_DIST =
-BUILT_SOURCES =
-SUFFIXES =
-MOSTLYCLEANFILES =
-CLEANFILES =
-DISTCLEANFILES =
-MAINTAINERCLEANFILES =
-
-AM_CPPFLAGS = \
-  -I. -I$(srcdir) \
-  -I.. -I$(srcdir)/.. \
-  -I../gl -I$(srcdir)/../gl
-
-LDADD = ../gl/libgl.la
-
-## begin gnulib module gc-hmac-md5-tests
-
-TESTS += test-gc-hmac-md5$(EXEEXT)
-noinst_PROGRAMS += test-gc-hmac-md5
-test_gc_hmac_md5_SOURCES = test-gc-hmac-md5.c
-
-## end   gnulib module gc-hmac-md5-tests
-
-## begin gnulib module gc-md5-tests
-
-TESTS += test-gc-md5$(EXEEXT)
-noinst_PROGRAMS += test-gc-md5
-test_gc_md5_SOURCES = test-gc-md5.c
-
-## end   gnulib module gc-md5-tests
-
-## begin gnulib module gc-tests
-
-TESTS += test-gc$(EXEEXT)
-noinst_PROGRAMS += test-gc
-test_gc_SOURCES = test-gc.c
-
-## end   gnulib module gc-tests
-
-# Clean up after Solaris cc.
-clean-local:
-	rm -rf SunWS_cache
-
-# Makefile.am ends here
